Fix trade history data not showing in table

--- a/frontend/src/app/features/trade-history/trade-history.component.scss
+++ b/frontend/src/app/features/trade-history/trade-history.component.scss
@@ -30,8 +30,8 @@ table {
   margin: auto 10px;
 }
 
-.mat-column-name,
-.mat-column-trade_type {
+.mat-column-assetCode,
+.mat-column-tradeType {
   font-weight: 500;
 }
 
